@@ -1,6 +1,7 @@
 gscrot (0.64~ppa1) intrepid; urgency=low
 
   * added ftp-upload
+  * new goo-canvas based drawing tool
   * improved start time
   * improved plugin interface and error handling
   * updated translations
